output.txt
   Compiling Bluestone v0.1.0 (/home/minecraft/Bluestone)
warning: unused import: `all::UserId`
 --> src/main.rs:3:5
  |
3 |     all::UserId,
  |     ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused imports: `Arc` and `process`
 --> src/main.rs:8:16
  |
8 | use std::{env, process, sync::{Arc, OnceLock}};
  |                ^^^^^^^         ^^^

warning: unused import: `tokio::sync::RwLock`
 --> src/main.rs:9:5
  |
9 | use tokio::sync::RwLock;
  |     ^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
   --> src/main.rs:107:71
    |
107 |                         self.say(&ctx, &msg.channel_id, get_user_info(user));
    |                                                         ------------- ^^^^ expected `&str`, found `Option<Option<&str>>`
    |                                                         |
    |                                                         arguments to this function are incorrect
    |
    = note: expected reference `&str`
                    found enum `Option<Option<&str>>`
note: function defined here
   --> src/main.rs:11:4
    |
11  | fn get_user_info(user: &str) -> String {
    |    ^^^^^^^^^^^^^ ----------

error[E0308]: mismatched types
   --> src/main.rs:107:57
    |
107 |                         self.say(&ctx, &msg.channel_id, get_user_info(user));
    |                              ---                        ^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
    |                              |
    |                              arguments to this method are incorrect
    |
note: method defined here
   --> src/main.rs:41:14
    |
41  |     async fn say(&self, ctx: &Context, channel_id: &ChannelId, message: &str) {
    |              ^^^                                               -------------
help: consider borrowing here
    |
107 |                         self.say(&ctx, &msg.channel_id, &get_user_info(user));
    |                                                         +

error[E0308]: mismatched types
    --> src/main.rs:113:48
     |
113  | ...                   user_info.push_str(get_user_info(user));
     |                                 -------- ^^^^^^^^^^^^^^^^^^^ expected `&str`, found `String`
     |                                 |
     |                                 arguments to this method are incorrect
     |
note: method defined here
    --> /home/minecraft/.rustup/toolchains/stable-aarch64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc/src/string.rs:1111:12
     |
1111 |     pub fn push_str(&mut self, string: &str) {
     |            ^^^^^^^^
help: consider borrowing here
     |
113  |                             user_info.push_str(&get_user_info(user));
     |                                                +

error[E0308]: mismatched types
   --> src/main.rs:117:57
    |
117 |                         self.say(&ctx, &msg.channel_id, user_info);
    |                              ---                        ^^^^^^^^^ expected `&str`, found `String`
    |                              |
    |                              arguments to this method are incorrect
    |
note: method defined here
   --> src/main.rs:41:14
    |
41  |     async fn say(&self, ctx: &Context, channel_id: &ChannelId, message: &str) {
    |              ^^^                                               -------------
help: consider borrowing here
    |
117 |                         self.say(&ctx, &msg.channel_id, &user_info);
    |                                                         +

For more information about this error, try `rustc --explain E0308`.
warning: `Bluestone` (bin "Bluestone") generated 3 warnings
error: could not compile `Bluestone` (bin "Bluestone") due to 4 previous errors; 3 warnings emitted
